Tue, 15 Jan 2008 14:50:13 +0100 <thp@perli.net>
Modularize calls to gobject.idle_add (for non-GTK support)

	* bin/gpodder: Set interface_is_gui to True when running the GUI
	* src/gpodder/*.py: Use util.idle_add instead of gobject.idle_add
	* src/gpodder/gui.py: Simplify some idle_add calls, code clean-up
	* src/gpodder/__init__.py: Add "interface_is_gui" boolean variable
	that tells us if we are running in GUI or CLI mode (this is needed for
	util.idle_add to determine if it's going to use the gobject module or
	not)
	* src/gpodder/util.py: Add new function idle_add() that acts as a
	wrapper to gobject.idle_add(); this will only use gobject.idle_add if
	we are in GUI mode, and will call the callback directly when we are in
	command-line mode (because we don't have to watch out for threading
	race conditions there, compared to what GTK+ gives us)

Mon, 14 Jan 2008 20:23:02 +0100 <thp@perli.net>
Add menu item that links to gPodder's new bug tracker

	* data/gpodder.glade: Add bug tracker item to help menu
	* src/gpodder/gui.py: Add code to open a webbrowser with the bug
	tracker when the bug tracker icon is clicked

Mon, 14 Jan 2008 20:04:25 +0100 <thp@perli.net>
Add a checkbox to keep episodes when removing channels

	* src/gpodder/gui.py: Add a checkbox to the confirmation dialog when
	removing a podcast channel, so the user has the option to remove the
	podcast feed from gPodder's subscription list, but still keep the
	downloaded files on the harddisk (via a checkbox in the dialog)
	(Closes: http://gpodder.thegithouse.com/show_bug.cgi?id=1)

Thu, 10 Jan 2008 08:44:00 +0100 <thp@perli.net>
Updated Russian translation by Hex

	* data/po/ru.po: Updated Russian translation by
	Hex <justin.forest@gmail.com>

Wed, 09 Jan 2008 23:43:56 +0100 <thp@perli.net>
Merge tray icon and notification patch by Jérôme Chabod

	* data/gpodder.glade: UI support for tray icon settings and
	configuration options for auto update feeds (auto update based on a